--- a/public/index.html
+++ b/public/index.html
@@ -27,20 +27,18 @@
                         <a class="nav-link" href="#">HOME </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">SERVICES</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#about">ABOUT US</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link " href="#">OUR TEAM</a>
+                        <a class="nav-link" href="#services">SERVICES</a>
                     </li>
+
+
 <!--                    <li class="nav-item">-->
 <!--                        <a class="nav-link " href="#">PRICE PLANS</a>-->
 <!--                    </li>-->
-                    <li class="nav-item">
-                        <a class="nav-link " href="#">BLOGS</a>
-                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link " href="#contact">CONTACT</a>
                     </li>
@@ -50,39 +48,59 @@
     </section>
 
 <!-------Slider------>
-<div id="slider">
-    <div id="headerSlider" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block img-fluid" src="img/banner1.jpg" alt="First slide">
-                <div class="carousel-caption"> <h5>How To Make A Website</h5></div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block img-fluid" src="img/banner1.jpg" alt="Second slide">
-                <div class="carousel-caption"> <h5>How To Make A Website</h5></div>
-            </div>
-            <div class="carousel-item">
-                <img class="d-block img-fluid" src="img/banner1.jpg" alt="Third slide">
-                <div class="carousel-caption"> <h5>How To Make A Website</h5></div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#headerSlider" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
+<!--<div id="slider">-->
+<!--    <div id="headerSlider" class="carousel slide" data-ride="carousel">-->
+<!--        <ol class="carousel-indicators">-->
+<!--            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>-->
+<!--            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>-->
+<!--            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>-->
+<!--        </ol>-->
+<!--        <div class="carousel-inner">-->
+<!--            <div class="carousel-item active">-->
+<!--                <img class="d-block img-fluid" src="img/banner1.png" alt="First slide">-->
+<!--                &lt;!&ndash; <div class="carousel-caption"> <h5<font color="#20423B">Waya Tech</font></h5></div> &ndash;&gt;-->
+<!--            </div>-->
+<!--            <div class="carousel-item">-->
+<!--                <img class="d-block img-fluid" src="img/banner1.png" alt="Second slide">-->
+<!--                &lt;!&ndash; <div class="carousel-caption"> <h5>Waya Tech</h5></div> &ndash;&gt;-->
+<!--            </div>-->
+<!--            &lt;!&ndash; <div class="carousel-item">-->
+<!--                <img class="d-block img-fluid" src="img/banner3.jpg" alt="Third slide">-->
+<!--                &lt;!&ndash; <div class="carousel-caption"> <h5>Waya Tech</h5></div> &ndash;&gt;-->
+<!--            </div> &ndash;&gt;-->
+<!--        </div>-->
+<!--        <a class="carousel-control-prev" href="#headerSlider" role="button" data-slide="prev">-->
+<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--            <span class="sr-only">Previous</span>-->
+<!--        </a>-->
+<!--        <a class="carousel-control-next" href="#headerSlider" role="button" data-slide="next">-->
+<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--            <span class="sr-only">Next</span>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--</div>-->
 
 <!----------About------>
+
+
+<div id="slider">
+    <div id="particles-js">
+        <div class="btext">
+            <h1>WAYA Tech</h1>
+            <p>Digital Solutions For A Better Tomorrow</p>
+            <!--            <a href="index.html" class="btn">Get Started</a>-->
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <script>
+        particlesJS.load('particles-js', 'particles.json',
+            function(){
+                console.log('particles.json loaded...')
+            })
+    </script>
+</div>
 
 <section id="about">
     <div class="container">
@@ -90,7 +108,8 @@
             <div class="col-md-6">
                 <h2> ABOUT US </h2>
                 <div class="about-content">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Augue eget arcu dictum varius duis at consectetur lorem. Sapien pellentesque habitant morbi tristique senectus et. Elit at imperdiet dui accumsan. Urna cursus eget nunc scelerisque viverra. Pretium aenean pharetra magna ac placerat vestibulum lectus mauris ultrices. Vitae suscipit tellus mauris a diam maecenas. Tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Tellus orci ac auctor augue mauris augue. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam. Molestie nunc non blandit massa enim nec dui. Urna molestie at elementum eu facilisis sed odio. Nec feugiat nisl pretium fusce id velit. Malesuada proin libero nunc consequat interdum. Leo vel orci porta non pulvinar neque laoreet suspendisse. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Ut consequat semper viverra nam libero justo laoreet sit amet. Ut tellus elementum sagittis vitae et leo.
+                  A technology-intensive company that envisions a green and digitised future. Whether it is development, blockchain technology, upgrading to latest technology, mass data analysis, or data visualization, we are the best fit for you.
+We aspire to elevate the productivity and growth of our customers by providing innovative I.T solutions.
                 </div>
             </div>
             <div class="col-md-6 testing">
@@ -156,43 +175,54 @@
                 <div class="icon">
                     <i class="fa fa-desktop"></i>
                 </div>
+
+
+
+
+
+
+
+
+
+
                 <h3>Web Development</h3>
-                <p>Non curabitur gravida arcu ac tortor dignissim. Ultrices neque ornare aenean euismod elementum. Amet purus gravida quis blandit turpis cursus. Proin fermentum leo vel orci.</p>
+                <p>  Business, start-up, or a personal website, - make your digital precedes known with high quality, reliable, and user-friendly website..</p>
             </div>
             <div class="col-md-4 text-center">
                 <div class="icon">
                     <i class="fa fa-tablet"></i>
                 </div>
                 <h3>Mobile Apps Development</h3>
-                <p>Non curabitur gravida arcu ac tortor dignissim. Ultrices neque ornare aenean euismod elementum. Amet purus gravida quis blandit turpis cursus. Proin fermentum leo vel orci.</p>
+                <p>Gain a competitive edge in the market with innovative, feature-rich, and user-friendly mobile applications. We will develop a customised state-of-the-art app for you dedicated to your needs.</p>
             </div>
             <div class="col-md-4 text-center">
                 <div class="icon">
-                    <i class="fa fa-desktop"></i>
+                  <i class="fa fa-cubes"></i>
                 </div>
                 <h3>Blockchain Solutions</h3>
-                <p>Non curabitur gravida arcu ac tortor dignissim. Ultrices neque ornare aenean euismod elementum. Amet purus gravida quis blandit turpis cursus. Proin fermentum leo vel orci.</p>
+                <p>We offer an easier way to adopt blockchain and transform your enterprise with the industry’s most comprehensive and enterprise-grade blockchain platform. By using Hyperledger Blockchain Technology, we securely extend your business processes and applications while enabling you to process business transactions much faster.</p>
             </div>
             <div class="col-md-4 text-center">
                 <div class="icon">
-                    <i class="fa fa-paint-brush"></i>
+                    <i class="fa fa-hashtag"></i>
                 </div>
                 <h3>Social Media Marketing</h3>
-                <p>Non curabitur gravida arcu ac tortor dignissim. Ultrices neque ornare aenean euismod elementum. Amet purus gravida quis blandit turpis cursus. Proin fermentum leo vel orci.</p>
+                <p>Whether your content is created or not, we are the best fit for you. Get more traffic and ample publicity by the audience of your choice.</p>
             </div>
             <div class="col-md-4 text-center">
                 <div class="icon">
-                    <i class="fa fa-paint-brush"></i>
+                    <i class="fa fa-leaf"></i>
+                    <!-- <i class="fa fa-paint-brush"></i> -->
                 </div>
                 <h3>Green Solutions</h3>
-                <p>Non curabitur gravida arcu ac tortor dignissim. Ultrices neque ornare aenean euismod elementum. Amet purus gravida quis blandit turpis cursus. Proin fermentum leo vel orci.</p>
+                <p>  Why go green? Cost saving, eco-friendly, and renewable resources are just some of the advantages. Contact us today for an innovative solution designed specially for you and become part of a progressive business community.</p>
             </div>
             <div class="col-md-4 text-center">
                 <div class="icon">
-                    <i class="fa fa-paint-brush"></i>
+                <i class="fa fa-database"></i>
                 </div>
                 <h3>Data Analysis</h3>
-                <p>Non curabitur gravida arcu ac tortor dignissim. Ultrices neque ornare aenean euismod elementum. Amet purus gravida quis blandit turpis cursus. Proin fermentum leo vel orci.</p>
+                <p>Collection, Analysation, and Visualisation. No matter what stage your data journey is on, our services will help you achieve success.</p>
             </div>
         </div>
 
@@ -253,16 +283,16 @@
 
             </div>
             <div class="col-md-6 contact-info" >
-                <div class="follow"> <b>Address:</b> <i class="fa fa-map-marker" aria-hidden="true"></i> Office 6-F, 3rd floor, Ahmed centre, I-8 markaz, islamabad.</div>
-                <div class="follow"> <b>  Phone: </b> <i class="fa fa-phone" aria-hidden="true"></i> +92 333 xxx xxxx.</div>
-                <div class="follow"> <b>Address:</b> <i class="fa fa-envelope-o" aria-hidden="true"></i> ceo@email.com </div>
+                <div class="follow"> <b>Address:</b> <i class="fa fa-map-marker" aria-hidden="true"></i> Basement Silk Bank Plaza, Multi-Mart Market, MPCHS, E11/3, islamabad.</div>
+                <div class="follow"> <b>  Phone: </b> <i class="fa fa-phone" aria-hidden="true"></i> +92 3011009660.</div>
+                <div class="follow"> <b>Address:</b> <i class="fa fa-envelope-o" aria-hidden="true"></i> ceo@wayatech.co </div>
                 <div class="follow"><label> <b>Get Social :</b> </label>
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-google-plus"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-youtube-play"></i></a>
                 </div>
-                
+
             </div>
         </div>
     </div>
